versioned_docs/version-7.4.0/api/featureCollection.mdx
---
title: featureCollection
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

### Description

Takes one or more [Features](https://tools.ietf.org/html/rfc7946#section-3.2) and creates a [FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3).

### Parameters

| Name                 | Type                                                                                                                                                                                                                                                                                                           | Description                                                               |
| -------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------- |
| features             | **[Array](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Array)&lt;[Feature](https://tools.ietf.org/html/rfc7946#section-3.2)&lt;[GeometryObject](https://tools.ietf.org/html/rfc7946#section-3.1), [GeoJsonProperties](https://tools.ietf.org/html/rfc7946#section-3.2)&gt;&gt;** | input features                                                            |
| options<i>?</i>      | **[Object](https://developer.mozilla.org/docs/Web/JavaScript/Reference/Global_Objects/Object)**                                                                                                                                                                                                                | Optional Parameters _(default &#123;&#125;)_                              |
| options.bbox<i>?</i> | **[BBox](https://tools.ietf.org/html/rfc7946#section-5)**                                                                                                                                                                                                                                                      | Bounding Box Array [west, south, east, north] associated with the Feature |
| options.id<i>?</i>   | **Id**                                                                                                                                                                                                                                                                                                         | Identifier associated with the Feature                                    |

### Returns

**[FeatureCollection](https://tools.ietf.org/html/rfc7946#section-3.3)&lt;[GeometryObject](https://tools.ietf.org/html/rfc7946#section-3.1), [GeoJsonProperties](https://tools.ietf.org/html/rfc7946#section-3.2)&gt;** FeatureCollection of Features

### Examples

```javascript
var locationA = turf.point([-75.343, 39.984], { name: "Location A" });
var locationB = turf.point([-75.833, 39.284], { name: "Location B" });
var locationC = turf.point([-75.534, 39.123], { name: "Location C" });

var collection = turf.featureCollection([locationA, locationB, locationC]);

//=collection
```

### Installation

```javascript
$ npm install @turf/helpers

import { featureCollection } from "@turf/helpers";
const result = featureCollection(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.featureCollection(...);
```

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>
